<resources>
    <string name="app_name">Firebase Chat</string>
    <string name="welcome_to_life_our_way">Welcome to Firebase Chat</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="re_enter_email">Re-enter email</string>
    <string name="this_email_is_not_same">This email is not same as above</string>
    <string name="first_name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="last_name">Last name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_valid_name">Enter a valid name</string>
    <string name="enter_valid_last_name">Enter a valid last name</string>
    <string name="mobile">Mobile</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_valid_mobile_number">Enter a valid mobile number</string>
    <string name="role_message">You\'re all signed up, now to set up some accounts and you\'re ready to go! First of all do you receive funding for yourself, or are you a family member or carer or someone who does?</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="enter_valid_email">Enter a valid email</string>
    <string name="enter_valid_password">Enter valid password</string>
    <string name="show_password">Show password</string>
    <string name="logging_in">Logging in</string>
    <string name="password_not_same">Confirm password is not same as new password</string>
    <string name="password_updated_successfully">Password updated successfully</string>
    <string name="failed_to_update_password">Failed to update password</string>
    <string name="updating_passsword">Updating password</string>
    <string name="registering">Registering</string>
    <string name="logged_in_successfully">You have logged-in successfully</string>
    <string name="registered_successfully">You have registered successfully. Please check your email and verify it to login.</string>
    <string name="network_not_available">Network not available</string>
    <string name="unexpected_error_occurred">An unexpected error occurred. Please try after some time.</string>
    <string name="please_verify_your_email">Please verify your email to login</string>
    <string name="this_email_is_not_registered">This email is not registered</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="i_receive_funding">I receive funding</string>
    <string name="family_member_receive_funding">A family member or friend receives funding</string>
    <string name="i_am_service_provider">I\'m a service provider</string>
    <string name="caree">caree</string>
    <string name="carer">carer</string>
    <string name="worker">worker</string>
    <string name="select_a_role">Select one of among three options</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="user_doesnt_exist">User doesn\'t exists</string>
    <string name="user_already_exist">This email or mobile number is already registered</string>
    <string name="would_you_like_to_setup_your_profile">Would you like to setup your profile now, or wait until later? This will be visible to the users with access to your account, or who are connected to your account.</string>
    <string name="this_app_allows_you_to_setup">This app allows you to setup a profile for caree, which contains information about their interest, personality and health care. This will be visible to the users who are connected to your account and to the service providers caring for this caree.</string>
    <string name="setup_my_profile_now"><u>Setup my profile now</u></string>
    <string name="i_will_setup_my_profile_later"><u>I\'ll setup my profile later</u></string>
    <string name="what_is_the_name_of_caree">What is the name of the family member or friend you\'re helping care for?</string>
    <string name="enter_caree_first_name">Enter caree\'s first name</string>
    <string name="enter_caree_last_name">Enter caree\'s last name</string>
    <string name="ok">OK</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="session_expired_title">Session Expired</string>
    <string name="session_expired_message">Your session has been expired. Please login again to continue.</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="how_many_provide_service">How many people provide this service or do you provide this service alone?</string>
    <string name="many_people">Many people</string>
    <string name="only_one">Only one</string>
    <string name="many">many</string>
    <string name="one">one</string>
    <string name="now_you_need_your_business_details">Thanks, now you need to enter your business details, which we need to validate your profile. Your profile will not be publicly visible until your details have been validated.\n\nYou will need your ABC or ACN.</string>
    <string name="i_have_abn">I have an ABN</string>
    <string name="i_have_acn">I have an ACN</string>
    <string name="abn">ABN</string>
    <string name="acn">ACN</string>
    <string name="enter_your_abn">Enter your ABN</string>
    <string name="enter_your_acn">Enter your ACN</string>
    <string name="abn_validation">ABN must be of %d digits</string>
    <string name="acn_validation">ACN must be of %d digits</string>
    <string name="verfication_email_sent_to_user">Verification email sent to %s</string>
    <string name="email_not_verified">Your email is not verified. Please check your email and verify it. In case you didn\'t receive any email, you can resend it.</string>
    <string name="resend">Resend</string>
    <string name="sending_verification_email">Sending verification email</string>
    <string name="sending_reset_mail">Sending password reset mail</string>
    <string name="failed_to_send_verification_email">Failed to send verification email</string>
    <string name="failed_to_login_in">There is some problem in log in.</string>
    <string name="logging_out">Logging out</string>
    <string name="we_need_email_for_password_reset">We need your email to send your instructions for password reset.</string>
    <string name="we_have_sent_you_reset_mail">We have sent you instructions to reset your password!</string>
    <string name="failed_to_send_mail">Failed to send mail. Please try again later.</string>
    <string name="are_you_sure_you_want_to_delete_account">Are you sure you want to delete your account?</string>
    <string name="your_account_is_deleted">Your account is deleted.</string>
    <string name="failed_to_delete_your_account">Failed to delete your account</string>
    <string name="current_password">Current Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="re_enter_new_password">Re-enter new password</string>
    <string name="updating_profile">Updating profile</string>
    <string name="profile_updated_successfully">Your profile has been updated successfully</string>
</resources>
