<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/forgot_password"
        android:textColor="@color/accent"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/we_need_email_for_password_reset"
        android:gravity="center"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/form_heading_texts_size" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textColor="@color/accent"
        android:textSize="@dimen/form_heading_texts_size" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/gray_rounded_box"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/divider"
        android:textSize="@dimen/form_fields_text_size" />


    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_button"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="@dimen/form_fields_text_size" />
</LinearLayout>
