<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/change_password"
        android:textColor="@color/accent"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/current_password"
        android:textColor="@color/accent"
        android:textSize="@dimen/form_heading_texts_size" />

    <EditText
        android:id="@+id/etCurrentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/gray_rounded_box"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/divider"
        android:textSize="@dimen/form_fields_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_fields_vertical_margin"
        android:text="@string/new_password"
        android:textColor="@color/accent"
        android:textSize="@dimen/form_heading_texts_size" />

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/gray_rounded_box"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/divider"
        android:textSize="@dimen/form_fields_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_fields_vertical_margin"
        android:text="@string/confirm_password"
        android:textColor="@color/accent"
        android:textSize="@dimen/form_heading_texts_size" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/gray_rounded_box"
        android:hint="@string/re_enter_new_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/divider"
        android:textSize="@dimen/form_fields_text_size" />


    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_button"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="@dimen/form_fields_text_size" />


</LinearLayout>
