<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/delete_account"
        android:textColor="@color/accent"
        android:textSize="25sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_fields_vertical_margin"
        android:text="@string/password"
        android:textColor="@color/accent"
        android:textSize="@dimen/form_heading_texts_size" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/gray_rounded_box"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/divider"
        android:textSize="@dimen/form_fields_text_size"
        android:layout_marginBottom="10dp"/>
</LinearLayout>