<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="20dp">

        <FrameLayout
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher_round"
                app:civ_border_color="@color/background_dark"
                app:civ_border_width="1dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfilePic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher_round"
                app:civ_border_color="@color/background_dark"
                app:civ_border_width="1dp" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/first_name"
            android:textColor="@color/accent"
            android:textSize="@dimen/form_heading_texts_size" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/gray_rounded_box"
            android:hint="@string/enter_your_name"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/divider"
            android:textSize="@dimen/form_fields_text_size" />


        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:text="@string/update_profile"
            android:textColor="@color/white"
            android:textSize="@dimen/form_fields_text_size" />


    </LinearLayout>
</LinearLayout>